simple-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deploy
spec:
  selector:
    matchLabels:
      app: simple
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
      - name: simple-java
        image: romajanlyi/simple-java-app:for-update
        ports:
          - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            port: 8082
            path: /management-simple-spring/monitoring/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          initialDelaySeconds: 10
          timeoutSeconds: 1
          httpGet:
            path: /management-simple-spring/monitoring/beans
            port: 8082
          periodSeconds: 10
          failureThreshold: 3
        resources:
          limits:
            memory: "300Mi"
          requests:
            memory: "100Mi"
