simple-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: simple-pod
spec:
  containers:
    - image: romajanlyi/simple-java-app
      name: simple-java-app
      ports: 
        - containerPort: 8080
