load-balance.yml
apiVersion: v1
kind: Service
metadata:
  name: load-example-svc
  namespace: simple
spec:
  type: LoadBalancer
  selector:
    app: simple
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30002
