nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: node-example-svc
  namespace: simple
spec:
  type: NodePort
  selector:
    app: simple
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30001
