simple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-svc
spec:
  selector: 
    app: simple
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
